--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <li>Eagle Scout</li>
           </ul>
 
-          <a href="/scratch.html">View my Scratch Page here</a>
+          <a href="./scratch.html">View my Scratch Page here</a>
         </div>
       </div>
 
