--- a/scratch.html
+++ b/scratch.html
@@ -57,7 +57,7 @@
         />
       </div>
       <div id="resume-link">
-        <a href="/index.html">See my Resume Here</a>
+        <a href="./index.html">See my Resume Here</a>
         <div
           class="tableauPlaceholder"
           id="viz1744689348050"
